WebVisualizations/css/responsive.css
/* Google Fonts: Import */
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');

/* Navigation Bar: top */
.bg-dark {
    background-color: #222831 !important;
}

/* Page Name: top left */
.navbar-brand {
    font-size: xx-large;
    letter-spacing: 1px;
    color: #ececec;
    font-family: 'Montserrat', sans-serif;
}

/* Menu Items: top right */
.navbar-dark .navbar-nav .nav-link {
    font-size: 20px;
    font-family: 'Montserrat', sans-serif;
}

/* Menu Items > Dropdown */
.dropdown-item {
    font-family: 'Montserrat', sans-serif;
    font-size: 17px;
}

/* Menu Items > Dropdown Menu */
.dropdown-menu {
    background-color: #ececec;
}

/* Menu Items > Dropdown > Hover */
.dropdown-menu a:hover{
    background-color: rgba(242, 163, 101, .5);
}

/* Page Background */
body {
    background-color: #30475e;
}

/* Container Fluid */
.container-fluid {
    margin-top: 75px;
    margin-bottom: 75px;
}

/* Container */
.container {
    background-color: #ececec;
    padding: 0px 45px 25px 45px;
}

/* Header */
header {
    color: #222831;
    font-size: 45px;
    font-family: 'Lora', serif;
    font-weight: 600;
    font-style: italic;
    text-align: center;
    margin: 25px auto 25px auto;
}

/* Horizontal Rule */  
hr {
border: 1px solid #f2a365;
margin: 0px 15px 20px 15px;
}

/* Text Class: Add to format text */
.text {
    color: #222831;
    font-family: 'Lora', serif;
    font-size: 25px;
    font-weight: 500;
    text-align: center;
    margin: 25px 15px 25px 15px;
}

/* Image */
.img-right {
    padding: 25px 15px 25px 15px;
}

/* Image Float */
.img-float {
    float: left;
    padding: 25px 15px 25px 15px;
    width: initial;
    height: initial;
}

@media (max-width: 576px) {
    header {
        font-size: 25px;
    }

    .img-float {
        padding: 25px 15px 25px 15px;
    }
}

@media (max-width: 992px) {
    header {
        font-size: 35px;
    }

    .container {
        margin: 5px 5px 5px 5px;
    }

    .img-float {
        padding: 25px 15px 25px 15px;
    }

    .text {
        font-size: 20px;
    }
}

